<resources>
    <string name="app_name">Math Quest</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_study">StudyActivity</string>
    <string name="title_activity_score">ScoreGameActivity</string>
    <string name="title0">Question 1 - At the castle moat:</string>
    <string name="context0">You finally reach the castle and see that it is surrounded by an alligator infested moat.\nYou notice a number pad, with a hint saying \"The password is 2A.\", signed by Lord Hexadecimal.</string>
    <string name="contextF0">You finally reach the castle and see that it is surrounded by an alligator infested moat.\nYou notice a number pad, with a hint saying \"The password is 2A.\", signed by Lord Hexadecimal.</string>
    <string name="content0">2A converted from hexadecimal to decimal is:</string>
    <string name="answer0">42</string>
    <string name="title1">Question 2 - The Jester at the gate:</string>
    <string name="context1">The passcode was correct! At the end of the moat, Calcebra\'s jester blocks your way. He draws a card at random from a deck of cards and asks you to guess its suit.</string>
    <string name="contextF1">Well, you got the passcode wrong so you resorted to swimming past the alligators. That was not a good idea.\n\nAs you make it to the other side of the moat, Calcebra\'s jester blocks your way. He draws a card at random from a deck of cards and asks you to guess its suit.</string>
    <string name="content1">Assuming a deck of cards has 52 cards, and 13 of each suit, what is the percentage probability that the card\'s suit is spades? (ex. 60 percent would be 0.60)</string>
    <string name="answer1">0.25</string>
    <string name="title2">Question 3 - Enter the courtyard:</string>
    <string name="context2">The jester is amazed at your mathematical prowess and lets you through. You walk into a courtyard filled with numerous trees. Suddenly, the trees come alive and ensnare you with their branches. A magical vine hands you a scroll with another problem to solve, seemingly unwilling to let you go until you provide it with an answer.
</string>
    <string name="contextF2">The jester looks disappointed, then attacks you. Despite being hurt a bit from the fight, you manage to subdue him and progress into a courtyard filled with numerous trees. Suddenly, the trees come alive and ensnare you with their branches. A magical vine hands you a scroll with another problem to solve, seemingly unwilling to let you go until you provide it with an answer. The druid of the forest is choosing three of the ten trees to animate into treants.
</string>
    <string name="content2">How many ways can you pick three members of a group of ten if order does not matter?
</string>
    <string name="answer2">120</string>
    <string name="title3">Question 4 - The Grand Hall:</string>
    <string name="context3">The druid likes your answer and lets you go. You find your way to the Grand Hall. The hall is dark, but there is a flickering circuit beside you. The button does not work, but there is a dial and a formula to calculate the voltage that the circuit should receive.</string>
    <string name="contextF3">The druid did not like your answer, and you hurt yourself when you use your knife to cut yourself free. At the end of the courtyard, you find your way to the Grand Hall. The hall is dark, but there is a flickering circuit beside you. The button does not work, but there is a dial and a formula to calculate the voltage that the circuit should receive. Lightly glowing, the formula reads:</string>
    <string name="content3">The circuit in front of you takes a maximum voltage \"the limit as x approaches two, of 8 – 3x + 12x^2\". What voltage should the circuit receive?</string>
    <string name="answer3">50</string>
    <string name="title4">Question 5 - The Dungeon Entrance:</string>
    <string name="context4">You hear a resonating hum, and a solitary light turns on above one of the doors indicating that it is the one you need. However, it seems to be locked and the only way to open it is to solve the riddle you find engraved around the door frame.</string>
    <string name="contextF4">You fumble with the circuit to no avail, and resort to finding the door manually. You stumble and fall a few times but eventually find the correct one labeled "DUNGEON ENTRANCE". However, it seems to be locked and the only way to open it is to solve the riddle you find engraved around the door frame.</string>
    <string name="content4">\"I am a graph with four vertices and six edges. Can I exist?\"\n\nAnswer 1 for yes or 0 for no.</string>
    <string name="answer4">1</string>
    <string name="title5">Question 6 - Freeing the Princess:</string>
    <string name="context5">The door hears your answer, and seemingly alive, swings upon with a ceremonious thud. You enter the dungeon and find Princess Trig held by Calcebra. You immediately notice that something is not right about the scene in front of you.</string>
    <string name="contextF5">The door does not open. You smash at it with your fists and, seemingly hurt, the door swings upon with a ceremonious thud. However, you receive a few splinters in your hand. You progress through the dungeon and find Princess Trig held by Calcebra. You immediately notice that something is not right about the scene in front of you. Everything seems to be upside down.</string>
    <string name="content5">Let the image in front of you be represented by a 2-D vector in the form of (x, y). What do you multiply the y-coordinate by in order to reflect the image about the x-axis?</string>
    <string name="answer5">-1</string>
    <string name="title6">Question 7 – Past The Illusion:</string>
    <string name="context6">You flip the image in front of you and discover that it is an illusion. You feel the floor under you give way, and you are able to roll as you fall to the level below you. There is a golden shield in front of you, but it\'s locked behind a combination.</string>
    <string name="contextF6">While you struggle to flip the image in front of you, the floor under you gives way and you fall. You suffer a few bruises. You see a golden shield in front of you, but it\'s locked behind a combination.</string>
    <string name="content6">How many possible permutations exist for the letters in the word \“SHIELD\”?</string>
    <string name="answer6">720</string>
    <string name="title7">Question 8 – Another Useful Tool:</string>
    <string name="context7">Realizing that 720 combinations is too much, you search around the room for another way to retrieve the shield. You find a lever, pull it, and retrieve the shield from the wall. You discover a sword behind it with the same locking mechanism.</string>
    <string name="contextF7">You figure that there aren\'t too many combinations to enter, and you start guessing. By the time you are finished, your fingers become sore. You unlock the shield and discover a sword behind it with the same locking mechanism.</string>
    <string name="content7">How many possible permutations exist for the letters in the word \“SWORD\”?</string>
    <string name="answer7">120</string>
    <string name="title8">Question 9 – Three Paths</string>
    <string name="context8">You unlock the sword with ease and press on. You discover three paths in front of you, but there\'s a map. The map is given in the format of a binary search tree, with the way out given in the right child.</string>
    <string name="StartNav">START</string>
    <string name="StudyNav">STUDY</string>
    <string name="SettingsNav">SETTINGS</string>
    <string name="InstructionsNav">INSTRUCTIONS</string>
    <string name="retryNav">RETRY</string>
    <string name="playAgainNav">PLAY AGAIN</string>
    <string name="GameOverInfo">You\'re out of lives! Hit the retry button if you\'d like to try again.</string>
    <string name="GameOverLarge">GAME OVER</string>
    <string name="gCategories">General Categories:</string>
    <string name="calculus">Calculus:</string>
    <string name="jmtCalc"><a href="http://patrickjmt.com/#calculus">PatrickJMT</a></string>
    <string name="trevCalc"><a href="https://trevtutor.com/calculus/calculus1/">TrevTutor</a></string>
    <string name="khanCalc"><a href="https://www.khanacademy.org/math/calculus-home">Khan Academy</a></string>
    <string name="discreteMath">Discrete Math:</string>
    <string name="jmtMacm"><a href="http://patrickjmt.com/#discrete-math">PatrickJMT</a></string>
    <string name="trevMacm"><a href="https://trevtutor.com/discretemath/discretemath1/">TrevTutor</a></string>
    <string name="trig">Trigonometry:</string>
    <string name="khanTrig"><a href="https://www.khanacademy.org/math/trigonometry">Khan Academy</a></string>
    <string name="jmtTrig"><a href="http://patrickjmt.com/#trigonometry">PatrickJMT</a></string>
    <string name="linAlg">Linear Algebra:</string>
    <string name="trevLalg"><a href="https://trevtutor.com/algebra/linear-algebra/">TrevTutor</a></string>
    <string name="jmtLalg"><a href="http://patrickjmt.com/#linear-algebra">PatrickJMT</a></string>
    <string name="algebra">Algebra:</string>
    <string name="jmtAlg"><a href="http://patrickjmt.com/#algebra">PatrickJMT</a></string>
    <string name="khanAlg"><a href="https://www.khanacademy.org/math/algebra-home">Khan Academy</a></string>
    <string name="sCategories">Specific Categories:</string>
    <string name="converting">Converting:</string>
    <string name="convertingLink"><a href="https://www.youtube.com/watch?v=aW3qCcH6Dao">Converting between binary, hex, and decimal</a></string>
    <string name="logic">Logic:</string>
    <string name="introProp"><a href="http://youtu.be/paRt4R71d8s">Introduction to Propositional Logic</a></string>
    <string name="logicLaws"><a href="http://y2u.be/_xjz99xHH8Q">Logic Laws</a></string>
    <string name="truthTables"><a href="http://y2u.be/oKQrt6myHLQ">Truth Tables</a></string>
    <string name="tableProofs"><a href="http://y2u.be/UB9hPtB9dKA">Truth Table Proofs</a></string>
    <string name="conditionals"><a href="http://y2u.be/p9VVi90n_48">Conditionals</a></string>
    <string name="prob">Probability:</string>
    <string name="linkProb"><a href="https://www.youtube.com/watch?v=YWt_u5l_jHs">Introduction to Probability</a></string>
    <string name="limits">Limits:</string>
    <string name="jmtLimits"><a href="https://www.youtube.com/playlist?list=PLDAA5D23D46B21257">PatrickJMT limits playlist</a></string>
    <string name="derivatives">Derivatives:</string>
    <string name="jmtDervs"><a href="https://www.youtube.com/playlist?list=PLDE077A2EC488104D">PatrickJMT derivatives playlist</a></string>
    <string name="musicBtn">TOGGLE MUSIC</string>
    <string name="welcome">Welcome to Math Quest!</string>
    <string name="instructions">Math Quest is a text based, story-driven game that follows a hero\'s quest to rescue a princess from an evil math wizard\'s castle. The game starts at the entrance to the wizards\'s castle with each following level being unlocked by completing a math problem. </string>
    <string name="instructions2">To progress through the game, simply click continue once you have read through the story and you will be provided with a problem to solve. If you provide a correct solution, your hero will progress to the next level, otherwise, you will lose a life.</string>
    <string name="importantInst">Note: please answer all questions using only numbers</string>
    <string name="exHeading">Example Question:</string>
    <string name="exQ">Convert 10100011 from binary to decimal</string>
    <string name="exInput">Your input:</string>
    <string name="exAnsw">163</string>
    <string name="ScoreModeNav">SCORE MODE</string>
    <string name="resetStoryNav">RESET STORY MODE PROGRESS</string>
    <string name="changeMusicNav">CHANGE MUSIC</string>
    <string name="AboutNav">ABOUT</string>
</resources>