<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"

    tools:context="sfu.ca.group3mathematicsapp.GameOverFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/GameOverInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="@string/GameOverInfo"

        android:textColor="@color/white" />

    <TextView
        android:id="@+id/GameOverTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/GameOverInfoTextView"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/GameOverLarge"
        android:textColor="@color/white"

        android:textSize="60dp" />

    <Button
        android:id="@+id/retryBtn"
        style="@style/buttonBasic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameOverInfoTextView"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:text="@string/retryNav" />


</RelativeLayout>
