<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="sfu.ca.group3mathematicsapp.MainActivity">

    <fragment
        android:id="@+id/menu_fragment"
        android:name="sfu.ca.group3mathematicsapp.LogoFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="7"
        tools:layout="@layout/fragment_logo" />


    <Button
        android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/StartNav"
        style="@style/buttonBasic" />

    <Button
        android:id="@+id/ScoreModeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:text="@string/ScoreModeNav"
        style="@style/buttonBasic" />


    <Button
        android:id="@+id/studyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:text="@string/StudyNav"
        style="@style/buttonBasic" />

    <Button
        android:id="@+id/instructionsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:text="@string/InstructionsNav"
        style="@style/buttonBasic"
        />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:text="@string/SettingsNav"
        style="@style/buttonBasic"
        />

</LinearLayout>
